--- a/index.html
+++ b/index.html
@@ -114,365 +114,96 @@
       <div class="container">
         <div class="row">
           <div class="header-section text-center">
-            <h2>Features</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Exercitationem nesciunt vitae,<br> maiores, magni dolorum aliquam.</p>
+            <h2>A l'affiche</h2>
+            <p>Retrouvez ci-dessous les affiches des films les plus récents.</p>
             <hr class="bottom-line">
           </div>
           <div class="feature-info">
             <div class="fea">
               <div class="col-md-4">
                 <div class="heading pull-right">
-                  <h4>Latest Technologies</h4>
-                  <p>Donec et lectus bibendum dolor dictum auctor in ac erat. Vestibulum egestas sollicitudin metus non urna in eros tincidunt convallis id id nisi in interdum.</p>
+                  <img src="./img/films/1.jpg" alt="">
+                  <h4>Le Sens de la fête</h4>
+                  <p style="text-align: justify;">Max est traiteur depuis trente ans. Des fêtes il en a organisé des centaines, il est même un peu au bout du parcours. Aujourd'hui c'est un sublime mariage dans un château du 17ème siècle, un de plus, celui de Pierre et Héléna... </p>
                 </div>
                 <div class="fea-img pull-left">
-                  <i class="fa fa-css3"></i>
+
                 </div>
               </div>
             </div>
+
             <div class="fea">
               <div class="col-md-4">
                 <div class="heading pull-right">
-                  <h4>Toons Background</h4>
-                  <p>Donec et lectus bibendum dolor dictum auctor in ac erat. Vestibulum egestas sollicitudin metus non urna in eros tincidunt convallis id id nisi in interdum.</p>
+                  <img src="./img/films/2.jpg" alt="">
+                  <h4>Le Petit Spirou</h4>
+                  <p style="text-align: justify;">Petit Spirou, comme toute sa famille avant lui, a un destin professionnel tout tracé. Quand sa mère lui annonce qu’il intègrera dès la rentrée prochaine l’école des grooms, Petit Spirou, avec l’aide de ses copains, va profiter de ses derniers jours de classe pour déclarer sa flamme à Suzette. Et pas n’importe comment. Ils décident de vivre une aventure extraordinaire. </p>
                 </div>
                 <div class="fea-img pull-left">
-                  <i class="fa fa-drupal"></i>
+
                 </div>
               </div>
             </div>
+
             <div class="fea">
               <div class="col-md-4">
                 <div class="heading pull-right">
-                  <h4>Award Winning Design</h4>
-                  <p>Donec et lectus bibendum dolor dictum auctor in ac erat. Vestibulum egestas sollicitudin metus non urna in eros tincidunt convallis id id nisi in interdum.</p>
+                  <img src="./img/films/3.jpg" alt="">
+                  <h4>L'Ecole buissonnière</h4>
+                  <p style="text-align: justify;">Paris 1930. Paul n’a toujours eu qu’un seul et même horizon : les hauts murs de l’orphelinat, sévère bâtisse de la banlieue ouvrière parisienne. Confié à une joyeuse dame de la campagne, Célestine et à son mari, Borel, le garde-chasse un peu raide d’un vaste domaine en Sologne, l’enfant des villes, récalcitrant et buté, arrive dans un monde mystérieux et inquiétant, celui d’une région souveraine et sauvage.  </p>
                 </div>
                 <div class="fea-img pull-left">
-                  <i class="fa fa-trophy"></i>
+
                 </div>
               </div>
             </div>
+
+            <div class="fea">
+              <div class="col-md-4">
+                <div class="heading pull-right">
+                  <img src="./img/films/4.jpg" alt="">
+                  <h4>Blade Runner 2049</h4>
+                  <p style="text-align: justify;">En 2049, la société est fragilisée par les nombreuses tensions entre les humains et leurs esclaves créés par bioingénierie. L’officier K est un Blade Runner : il fait partie d’une force d’intervention d’élite chargée de trouver et d’éliminer ceux qui n’obéissent pas aux ordres des humains. </p>
+                </div>
+                <div class="fea-img pull-left">
+
+                </div>
+              </div>
+            </div>
+
+            <div class="fea">
+              <div class="col-md-4">
+                <div class="heading pull-right">
+                  <img src="./img/films/5.jpg" alt="">
+                  <h4>Kingsman : Le Cercle d'or</h4>
+                  <p style="text-align: justify;">KINGSMAN, l’élite du renseignement britannique en costume trois pièces, fait face à une menace sans précédent. Alors qu’une bombe s’abat et détruit leur quartier général, les agents font la découverte d’une puissante organisation alliée nommée Statesman, fondée il y a bien longtemps aux Etats-Unis.</p>
+                </div>
+                <div class="fea-img pull-left">
+
+                </div>
+              </div>
+            </div>
+
+            <div class="fea">
+              <div class="col-md-4">
+                <div class="heading pull-right">
+                  <img src="./img/films/6.jpg" alt="">
+                  <h4>Ça</h4>
+                  <p style="text-align: justify;">À Derry, dans le Maine, sept gamins ayant du mal à s'intégrer se sont regroupés au sein du "Club des Ratés". Rejetés par leurs camarades, ils sont les cibles favorites des gros durs de l'école. Ils ont aussi en commun d'avoir éprouvé leur plus grande terreur face à un terrible prédateur métamorphe qu'ils appellent "Ça"… </p>
+                </div>
+                <div class="fea-img pull-left">
+
+                </div>
+              </div>
+            </div>
+
+
         </div>
         </div>
       </div>
     </section>
     <!--/ feature-->
-    <!--Organisations-->
-    <section id ="organisations" class="section-padding">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-6">
-            <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
-              <div class="orga-stru">
-                <h3>65%</h3>
-                <p>Say NO!!</p>
-                <i class="fa fa-male"></i>
-              </div>
-            </div>
-            <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
-              <div class="orga-stru">
-                <h3>20%</h3>
-                <p>Says Yes!!</p>
-                <i class="fa fa-male"></i>
-              </div>
-            </div>
-            <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
-              <div class="orga-stru">
-                <h3>15%</h3>
-                <p>Can't Say!!</p>
-                <i class="fa fa-male"></i>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-6">
-            <div class="detail-info">
-              <hgroup>
-                <h3 class="det-txt"> Is inclusive quality education affordable?</h3>
-                <h4 class="sm-txt">(Revised and Updated for 2016)</h4>
-              </hgroup>
-              <p class="det-p">Donec et lectus bibendum dolor dictum auctor in ac erat. Vestibulum egestas sollicitudin metus non urna in eros tincidunt convallis id id nisi in interdum.</p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-    <!--/ Organisations-->
-    <!--Cta-->
-    <section id="cta-2">
-      <div class="container">
-        <div class="row">
-            <div class="col-lg-12">
-              <h2 class="text-center">Subscribe Now</h2>
-              <p class="cta-2-txt">Sign up for our free weekly software design courses, we’ll send them right to your inbox.</p>
-             <div class="cta-2-form text-center">
-              <form action="#" method="post" id="workshop-newsletter-form">
-                    <input name="" placeholder="Enter Your Email Address" type="email">
-                    <input class="cta-2-form-submit-btn" value="Subscribe" type="submit">
-                </form>
-             </div>
-            </div>
-        </div>
-      </div>
-    </section>
-    <!--/ Cta-->
-    <!--work-shop-->
-    <section id="work-shop" class="section-padding">
-      <div class="container">
-        <div class="row">
-          <div class="header-section text-center">
-            <h2>Upcoming Workshop</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Exercitationem nesciunt vitae,<br> maiores, magni dolorum aliquam.</p>
-            <hr class="bottom-line">
-          </div>
-          <div class="col-md-4 col-sm-6">
-            <div class="service-box text-center">
-              <div class="icon-box">
-                <i class="fa fa-html5 color-green"></i>
-              </div>
-              <div class="icon-text">
-                <h4 class="ser-text">Mentor HTML5 Workshop</h4>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4 col-sm-6">
-            <div class="service-box text-center">
-              <div class="icon-box">
-                <i class="fa fa-css3 color-green"></i>
-              </div>
-              <div class="icon-text">
-                <h4 class="ser-text">Mentor CSS3 Workshop</h4>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4 col-sm-6">
-            <div class="service-box text-center">
-              <div class="icon-box">
-                <i class="fa fa-joomla color-green"></i>
-              </div>
-              <div class="icon-text">
-                <h4 class="ser-text">Mentor Joomla Workshop</h4>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-    <!--/ work-shop-->
-    <!--Faculity member-->
-    <section id="faculity-member" class="section-padding">
-      <div class="container">
-        <div class="row">
-          <div class="header-section text-center">
-            <h2>Meet Our Faculty Member</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Exercitationem nesciunt vitae,<br> maiores, magni dolorum aliquam.</p>
-            <hr class="bottom-line">
-          </div>
-          <div class="col-lg-4 col-md-4 col-sm-4">
-            <div class="pm-staff-profile-container" >
-              <div class="pm-staff-profile-image-wrapper text-center">
-                <div class="pm-staff-profile-image">
-                  <img src="img/mentor.jpg" alt="" class="img-thumbnail img-circle" />
-                </div>
-              </div>
-              <div class="pm-staff-profile-details text-center">
-                <p class="pm-staff-profile-name">Bryan Johnson</p>
-                <p class="pm-staff-profile-title">Lead Software Engineer</p>
 
-                <p class="pm-staff-profile-bio">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec et placerat dui. In posuere metus et elit placerat tristique. Maecenas eu est in sem ullamcorper tincidunt. </p>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-4 col-md-4 col-sm-4">
-            <div class="pm-staff-profile-container" >
-              <div class="pm-staff-profile-image-wrapper text-center">
-                <div class="pm-staff-profile-image">
-                  <img src="img/mentor.jpg" alt="" class="img-thumbnail img-circle" />
-                </div>
-              </div>
-              <div class="pm-staff-profile-details text-center">
-                <p class="pm-staff-profile-name">Bryan Johnson</p>
-                <p class="pm-staff-profile-title">Lead Software Engineer</p>
-
-                <p class="pm-staff-profile-bio">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec et placerat dui. In posuere metus et elit placerat tristique. Maecenas eu est in sem ullamcorper tincidunt. </p>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-4 col-md-4 col-sm-4">
-            <div class="pm-staff-profile-container" >
-              <div class="pm-staff-profile-image-wrapper text-center">
-                <div class="pm-staff-profile-image">
-                    <img src="img/mentor.jpg" alt="" class="img-thumbnail img-circle" />
-                </div>
-              </div>
-              <div class="pm-staff-profile-details text-center">
-                <p class="pm-staff-profile-name">Bryan Johnson</p>
-                <p class="pm-staff-profile-title">Lead Software Engineer</p>
-
-                <p class="pm-staff-profile-bio">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec et placerat dui. In posuere metus et elit placerat tristique. Maecenas eu est in sem ullamcorper tincidunt. </p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-    <!--/ Faculity member-->
-    <!--Testimonial-->
-    <section id="testimonial" class="section-padding">
-      <div class="container">
-        <div class="row">
-          <div class="header-section text-center">
-            <h2 class="white">See What Our Customer Are Saying?</h2>
-            <p class="white">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Exercitationem nesciunt vitae,<br> maiores, magni dolorum aliquam.</p>
-            <hr class="bottom-line bg-white">
-          </div>
-          <div class="col-md-6 col-sm-6">
-            <div class="text-comment">
-              <p class="text-par">"Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, nec sagittis sem"</p>
-              <p class="text-name">Abraham Doe - Creative Dırector</p>
-            </div>
-          </div>
-          <div class="col-md-6 col-sm-6">
-            <div class="text-comment">
-              <p class="text-par">"Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, nec sagittis sem"</p>
-              <p class="text-name">Abraham Doe - Creative Dırector</p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-    <!--/ Testimonial-->
-    <!--Courses-->
-    <section id ="courses" class="section-padding">
-      <div class="container">
-        <div class="row">
-          <div class="header-section text-center">
-            <h2>Courses</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Exercitationem nesciunt vitae,<br> maiores, magni dolorum aliquam.</p>
-            <hr class="bottom-line">
-          </div>
-        </div>
-      </div>
-      <div class="container">
-        <div class="row">
-          <div class="col-md-4 col-sm-6 padleft-right">
-            <figure class="imghvr-fold-up">
-              <img src="img/course01.jpg" class="img-responsive">
-              <figcaption>
-                  <h3>Course Name</h3>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam atque, nostrum veniam consequatur libero fugiat, similique quis.</p>
-              </figcaption>
-              <a href="#"></a>
-            </figure>
-          </div>
-          <div class="col-md-4 col-sm-6 padleft-right">
-            <figure class="imghvr-fold-up">
-              <img src="img/course02.jpg" class="img-responsive">
-              <figcaption>
-                  <h3>Course Name</h3>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam atque, nostrum veniam consequatur libero fugiat, similique quis.</p>
-              </figcaption>
-              <a href="#"></a>
-            </figure>
-          </div>
-          <div class="col-md-4 col-sm-6 padleft-right">
-            <figure class="imghvr-fold-up">
-              <img src="img/course03.jpg" class="img-responsive">
-              <figcaption>
-                  <h3>Course Name</h3>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam atque, nostrum veniam consequatur libero fugiat, similique quis.</p>
-              </figcaption>
-              <a href="#"></a>
-            </figure>
-          </div>
-          <div class="col-md-4 col-sm-6 padleft-right">
-            <figure class="imghvr-fold-up">
-              <img src="img/course04.jpg" class="img-responsive">
-              <figcaption>
-                  <h3>Course Name</h3>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam atque, nostrum veniam consequatur libero fugiat, similique quis.</p>
-              </figcaption>
-              <a href="#"></a>
-            </figure>
-          </div>
-          <div class="col-md-4 col-sm-6 padleft-right">
-            <figure class="imghvr-fold-up">
-              <img src="img/course05.jpg" class="img-responsive">
-              <figcaption>
-                  <h3>Course Name</h3>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam atque, nostrum veniam consequatur libero fugiat, similique quis.</p>
-              </figcaption>
-              <a href="#"></a>
-            </figure>
-          </div>
-          <div class="col-md-4 col-sm-6 padleft-right">
-            <figure class="imghvr-fold-up">
-              <img src="img/course06.jpg" class="img-responsive">
-              <figcaption>
-                  <h3>Course Name</h3>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam atque, nostrum veniam consequatur libero fugiat, similique quis.</p>
-              </figcaption>
-              <a href="#"></a>
-            </figure>
-          </div>
-        </div>
-      </div>
-    </section>
-    <!--/ Courses-->
-    <!--Pricing-->
-    <section id ="pricing" class="section-padding">
-      <div class="container">
-        <div class="row">
-          <div class="header-section text-center">
-            <h2>Our Pricing</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Exercitationem nesciunt vitae,<br> maiores, magni dolorum aliquam.</p>
-            <hr class="bottom-line">
-          </div>
-          <div class="col-md-4 col-sm-4">
-            <div class="price-table">
-              <!-- Plan  -->
-              <div class="pricing-head">
-                <h4>Monthly Plan</h4>
-                <span class="fa fa-usd curency"></span> <span class="amount">200</span>
-              </div>
-
-              <!-- Plean Detail -->
-              <div class="price-in mart-15">
-                <a href="#" class="btn btn-bg green btn-block">PURCHACE</a>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4 col-sm-4">
-            <div class="price-table">
-              <!-- Plan  -->
-              <div class="pricing-head">
-                <h4>Quarterly Plan</h4>
-                <span class="fa fa-usd curency"></span> <span class="amount">800</span>
-              </div>
-
-              <!-- Plean Detail -->
-              <div class="price-in mart-15">
-                <a href="#" class="btn btn-bg yellow btn-block">PURCHACE</a>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4 col-sm-4">
-            <div class="price-table">
-              <!-- Plan  -->
-              <div class="pricing-head">
-                <h4>Year Plan</h4>
-                <span class="fa fa-usd curency"></span> <span class="amount">1200</span>
-              </div>
-
-              <!-- Plean Detail -->
-              <div class="price-in mart-15">
-                <a href="#" class="btn btn-bg red btn-block">PURCHACE</a>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-    <!--/ Pricing-->
     <!--Contact-->
     <section id ="contact" class="section-padding">
       <div class="container">
